--- a/eazyride_mobile/pubspec.yaml
+++ b/eazyride_mobile/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   dio: ^5.8.0+1
   google_sign_in: ^6.2.2
   flutter_dotenv: ^5.2.1
+  web_socket_channel: ^3.0.2
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
   flutter_test:
@@ -90,6 +92,7 @@ flutter:
      - assets/images/
      - assets/images/cars/
      - assets/onboard/
+     - .env
   #    
 
   # An image asset can refer to one or more resolution-specific "variants", see
