--- a/eazyride_mobile/android/app/build.gradle
+++ b/eazyride_mobile/android/app/build.gradle
@@ -1,61 +1,61 @@
 plugins {
     id "com.android.application"
     id "kotlin-android"
-    // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
 
+def localProperties = new Properties()
+def localPropertiesFile = rootProject.file('local.properties')
+if (localPropertiesFile.exists()) {
+    localPropertiesFile.withReader('UTF-8') { reader ->
+        localProperties.load(reader)
+    }
+}
+
+def flutterRoot = localProperties.getProperty('flutter.sdk')
+if (flutterRoot == null) {
+    throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
+}
+
+def flutterVersionCode = 1  // Define the version code
+def flutterVersionName = "1.0.0"  // Define the version name
+
 android {
-    namespace = "com.example.eazyride_mobile"
-    compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    namespace "com.example.eazyride_mobile"
+    compileSdkVersion flutter.compileSdkVersion
+    ndkVersion flutter.ndkVersion
+
+    buildFeatures {
+        buildConfig true
+    }
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = '1.8'
     }
 
     defaultConfig {
-        applicationId = "com.example.eazyride_mobile"
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
-
-        // Inject API Key into BuildConfig
-        buildConfigField "String", "API_KEY", '"YOUR_API_KEY_HERE"'
+        applicationId "com.example.eazyride_mobile"
+        minSdkVersion flutter.minSdkVersion
+        targetSdkVersion flutter.targetSdkVersion
+        versionCode flutterVersionCode.toInteger()  // Use the defined version code
+        versionName flutterVersionName  // Use the defined version name
+        
+        // buildConfigField "String", "Google_Api_Key", "\"${localProperties.getProperty('Google_Api_Key')}\""
+        buildConfigField "String", "MAPBOX_ACCESS_TOKEN", "\"pk.eyJ1IjoibnR3YXJpZmlhY3JlIiwiYSI6ImNtN2UzZjBpbDA1NWMybXM3NDc3bGJlOGYifQ.AXM-Vk9Vq7mzYyoQH5AnMw\""
     }
 
     buildTypes {
         release {
-            // Signing with debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
-        }
-    }
-
-    // Task to replace placeholder in values.xml with the actual API key
-    applicationVariants.all { variant ->
-        variant.outputs.all {
-            def apiKey = BuildConfig.API_KEY
-            processResources {
-                doLast {
-                    // Path to the values.xml file where the API key placeholder is defined
-                    def valuesFile = file("src/main/res/values/values.xml")
-                    def content = valuesFile.text
-                    // Replace the placeholder with the actual API key
-                    content = content.replace("API_KEY_FROM_BUILD_CONFIG", apiKey)
-                    // Save the modified content back to the values.xml file
-                    valuesFile.text = content
-                }
-            }
+            signingConfig signingConfigs.debug
         }
     }
 }
 
 flutter {
-    source = "../.."
+    source '../..'
 }
