--- a/eazyride_mobile/pubspec.yaml
+++ b/eazyride_mobile/pubspec.yaml
@@ -19,7 +19,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.4
+  sdk: '>=3.0.0 <4.0.0'
+  flutter: ">=3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -42,8 +43,6 @@ dependencies:
   country_picker: ^2.0.27
   country_flags: ^3.2.0
   pin_code_fields: ^8.0.1
-  flutter_map: ^7.0.2
-  mapbox_maps_flutter: ^2.5.0
   latlong2: ^0.9.1
   smooth_page_indicator: ^1.2.0+3
   lottie: ^3.2.0
@@ -65,6 +64,8 @@ dependencies:
   web_socket_channel: ^3.0.2
   flutter_local_notifications: ^18.0.1
   url_launcher: ^6.3.1
+  permission_handler: ^11.4.0
+  mapbox_maps_flutter: ^2.6.0
 
 dev_dependencies:
   flutter_test:
